Related: fdo#65632 DOCX filter: fix import of non-redlined footnote

Change-Id: Ie1a86e6b59c43c3ee54076d5d68aa3fca0d6a515