writerfilter/source/dmapper/DomainMapper_Impl.hxx
@@ -356,7 +356,7 @@ private:
     ::com::sun::star::uno::Reference< text::XTextRange >      m_xFrameEndRange;
 
     // Redline stack
-    std::vector< RedlineParamsPtr > m_aRedlines;
+    std::stack< std::vector< RedlineParamsPtr > > m_aRedlines;
     RedlineParamsPtr                m_pParaRedline;
     bool                            m_bIsParaChange;
 
